--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <input id="checkbox-input" type="checkbox" />
       <label>Accept</label>
     </div><br>
-    <input id="button" type="button" value="Click to add" onclick="addValue()"/>
+    <input id="button" type="button" value="Click to add" />
   </form>
   <script src="main.js"></script>
 </body>
