add data element

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <label>Name: </label> <input id="name-input" type="text" />
     </div>
     <div>
-      <input id="male-radio" type="radio" name="gender" value="male" />
+      <input id="male-radio" type="radio" name="gender" value="Male" />
       <label>Male</label>
-      <input id="female-radio" type="radio" name="gender" value="female" />
+      <input id="female-radio" type="radio" name="gender" value="Female" />
       <label>Female</label>
     </div>
     <div>
@@ -23,6 +23,7 @@
     </div><br>
     <input id="button" type="button" value="Click to add" />
   </form>
-  <script src="main.js"></script>
+  <section id="data"></section>
+  <script src="main.js" style="padding-top: 10px;"></script>
 </body>
 </html>
